Fix Composer: Width jumps, web page with long description, missing closing animation (#1450)

--- a/src/components/middle/composer/Composer.scss
+++ b/src/components/middle/composer/Composer.scss
@@ -189,7 +189,7 @@
   }
 
   @media (max-width: 600px) {
-    max-width: calc(100% - 3rem);
+    max-width: calc(100% - 3.375rem);
   }
 }
 
